xee-xpath/src/snapshots/xee_xpath__ir_interpret__tests__comma_simple_map.snap
---
source: xee-xpath/src/ir_interpret.rs
expression: "run(\"(1, 2), (3, 4) ! (. + 1)\")"
---
Ok(
    Sequence(
        RefCell {
            value: Sequence {
                items: [
                    Atomic(
                        Integer(
                            1,
                        ),
                    ),
                    Atomic(
                        Integer(
                            2,
                        ),
                    ),
                    Atomic(
                        Integer(
                            4,
                        ),
                    ),
                    Atomic(
                        Integer(
                            5,
                        ),
                    ),
                ],
            },
        },
    ),
)
