xee-xpath/src/snapshots/xee_xpath__ir_interpret__tests__comma_squences.snap
---
source: xee-xpath/src/ir_interpret.rs
expression: "run(\"(1, 2), (3, 4)\")"
---
Ok(
    Sequence(
        RefCell {
            value: Sequence {
                items: [
                    Atomic(
                        Integer(
                            1,
                        ),
                    ),
                    Atomic(
                        Integer(
                            2,
                        ),
                    ),
                    Atomic(
                        Integer(
                            3,
                        ),
                    ),
                    Atomic(
                        Integer(
                            4,
                        ),
                    ),
                ],
            },
        },
    ),
)
