xee-xpath/src/snapshots/xee_xpath__ir_interpret__tests__compare_general_eq_sequence_true.snap
---
source: xee-xpath/src/ir_interpret.rs
expression: "run(\"(1, 2) = (3, 2)\")"
---
Ok(
    Atomic(
        Boolean(
            true,
        ),
    ),
)
