xee-xpath/src/snapshots/xee_xpath__ir_interpret__tests__compile_add.snap
---
source: xee-xpath/src/ir_interpret.rs
expression: "run(\"1 + 2\")"
---
Ok(
    Atomic(
        Integer(
            3,
        ),
    ),
)
