xee-xpath/src/snapshots/xee_xpath__ir_interpret__tests__count.snap
---
source: xee-xpath/src/ir_interpret.rs
expression: "run_xml(r#\"<doc><a/><b><c/></b></doc>\"#, \"fn:count(descendant::*)\")"
---
Ok(
    Atomic(
        Integer(
            4,
        ),
    ),
)
