xee-xpath/src/snapshots/xee_xpath__ir_interpret__tests__default_last.snap
---
source: xee-xpath/src/ir_interpret.rs
expression: "run(\"fn:last()\")"
---
Atomic(
    Integer(
        1,
    ),
)
