xee-xpath/src/snapshots/xee_xpath__ir_interpret__tests__default_last_no_context.snap
---
source: xee-xpath/src/ir_interpret.rs
expression: "run(\"fn:last()\")"
---
Err(
    XPDY0002 {
        src: "fn:last()",
        span: SourceSpan {
            offset: SourceOffset(
                0,
            ),
            length: SourceOffset(
                9,
            ),
        },
    },
)
