xee-xpath/src/snapshots/xee_xpath__ir_interpret__tests__default_position.snap
---
source: xee-xpath/src/ir_interpret.rs
expression: "run(\"fn:position()\")"
---
Ok(
    Atomic(
        Integer(
            1,
        ),
    ),
)
