xee-xpath/src/snapshots/xee_xpath__ir_interpret__tests__default_position_with_operation.snap
---
source: xee-xpath/src/ir_interpret.rs
expression: "run(\"fn:position() + 1\")"
---
Err(
    XPTY0004 {
        src: NamedSource {
            name: "input",
            source: "<redacted>",
        ,
        span: SourceSpan {
            offset: SourceOffset(
                0,
            ),
            length: SourceOffset(
                17,
            ),
        },
    },
)
